# spectrum

./: .gitignore  Cargo.toml  README.md  TODO
src/: color.rs  main.rs
